# apue

./: .gitignore  CMakeLists.txt  README.md  cmake_template.cmake  cmake_template.txt  test.c
ch1_unix_system_overview/: CMakeLists.txt  fig1-10_shell2.c  fig1-3_list.c  fig1-4_mycat.c  fig1-5_getcputc.c  fig1-6_getpid.c  fig1-7_shell1.c  fig1-8_testerror.c  fig1-9_uidgid.c
ch2_standards/: CMakeLists.txt  fig2-16_pathalloc.c  fig2-17_maxfdnum.c  make_detector.py
ch2_unix_standardization_and_implementations/: CMakeLists.txt  README.md  fig2-14_pr_limits.c  fig2-16_pathalloc.c  fig2-17_maxfdnum.c  make_detector.py
ch2_unix_standardization_and_implementations/utils/: __init__.py
ch3_fileio/: fig3-11_pr_fdflags.c  fig3-12_file_flags.c  fig3-1_lseek_STDIN.c  fig3-2_file_with_hole.c  fig3-5_mycat.c
ch4_file_and_directory/: fig4-12_test_chmod.c  fig4-16_open_unlink.c  fig4-21_test_futimes.c  fig4-22_myftw.c  fig4-23_test_chdir.c  fig4-24_test_getcwd.c  fig4-25_pr_devt.c  fig4-3_filetype.c  fig4-8_test_access.c  fig4-9_test_umask.c
ch5_stdio/: fig5-11_pr_stdio_info.c  fig5-12_test_tmpxx.c  fig5-13_test_mkstemp.c  fig5-15_examine_memstream.c  fig5-4_mycat2.c  fig5-5_mycat3.c  test_memstream.c
ch6_sysdata/: fig6-11_test_strftime.c  fig6-2_getpwnam.c  fig6-6_dispserv.c  print_sysinfo.c
ch7_procenv/: ch7-3_test_atexit.c  fig7-13_longjump_effects.c  fig7-14_problem_automaticvariable.c  fig7-16_pr_rlimits.c  fig7-3_test_atexit.c  fig7-4_echo_cmdargs.c  fig7-9_setjmp_longjmp_skeleton.c  fig7_14-problem_automaticvariable.c  fig7_4-echo_cmdargs.c
ch8_procctl/: CMakeLists.txt  awk_script.awk  (+13 more)
(+12 files in other folders)
